deploy-k8s-resources/kong/ingress-upstream.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
  name: upstream-1
  namespace: upstream
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: upstream
            port:
              number: 8000
        path: /1route
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
  name: upstream-2
  namespace: upstream
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: upstream
            port:
              number: 8000
        path: /2route
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
  name: upstream-3
  namespace: upstream
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: upstream
            port:
              number: 8000
        path: /3route
        pathType: ImplementationSpecific
